[RecordItem] Set `z-index` for action container to fix overlapping issues.

--- a/src/app/shared/components/record-item/_record-item-base.scss
+++ b/src/app/shared/components/record-item/_record-item-base.scss
@@ -109,6 +109,7 @@
       position: absolute;
       bottom: 10px;
       left: 0;
+      z-index: 1;
     }
 
     .record-item-card__actions {
